WIP! refactor: make token-support java 8 compliant
Making the project java 8 compliant will (possibly) make it easier for
older applications to migrate from another security-framework.

This means that we cannot use newer java features but as you can see in
the patch it doesn't mean much at this point in time.